Updates in v0.8.0
TYPES:
1. RawData: minor bug fix for attribute names.
2. Added CorrDataEnsemble() placeholder, to store a gather of CorrData from the same virtual source.
3. Fixed a bug when merging corrdata pairs with different channel types (when ignore_channel_type is True).
4. Fixed typos in CorrData.filter(), where highpass() was typed as lhighpass.

DOWNLOADERS:
1. download(): use "PRESSURE" as output for pressure channel.

UTILS:
1. Change np.float to np.float32.
2. save2asdf(): fixed sta_in when it is a list.
=======
2. save2asdf: Fixed a bug when saving multiple traces with a list of station inventory.

DOWNLOADERS:
1. download(): changed pressure channel rmresp output to "PRESSURE", instead of hardcoding it to "VEL".

STACKING:
1. stack: discard NaN traces before passing the data to each method.
2. robust: fixed a bug when outlier traces have huge amplitudes, which would cause the dot product 
  and L2 norms too large to be handeled by the system. The final stack will be scaled back.
=================================================================
Updates in v0.7.7
TYPES:
1. CorrData.merge(): added option to ignore channel types. This is needed when stations update
  their channels types, e.g., EH? to BH?. This new option would allow station pairs with different
  channel types to merge. Default is False.

NOISE:
1. merge_pairs(): added option of ignore_channel_type.

SETUP:
1. Change numpy requirement to be <1.26.0.
=================================================================
Updates in v0.7.6
UTILS:
1. Added smooth functions for 1d, 2d, and 3d grids.
2. Added matrix_in_polygon to extract 2d or 3d values with,in a polygon.
3. Added boundary_points() to get the boundary of a series of points.

=================================================================
Updates in v0.7.5
NOISE:
1. correlate(): discarded lines removing peak at zero lag (demean of the spectrum).

MONITORING: