@@ -4,6 +4,12 @@ TYPES:
 2. Added CorrDataEnsemble() placeholder, to store a gather of CorrData from the same virtual source.
 3. Fixed a bug when merging corrdata pairs with different channel types (when ignore_channel_type is True).
 4. Fixed typos in CorrData.filter(), where highpass() was typed as lhighpass.
+5. CorrData.merge(): fixed bugs when errors in joining two data matrices, the time attribute will still be merged, leading 
+to inconsistent sizes.
+
+NOISE:
+1. merge_pairs(): fixed minor bugs. Removed try{} block in stack, split, egf, and saving steps. The try block would hide errors
+that might be important to address.
 
 DOWNLOADERS:
 1. download(): use "PRESSURE" as output for pressure channel.
